# MediaPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  MPContentView.qml  MPMenuBar.qml  MPPitchControlPopup.qml  MPPlaybackControls.qml  MPProgressBar.qml  MPSettingsButton.qml  MPTheme.qml  Main.qml  README.md  main.cpp  resources.qrc
_macros/: Logging.hpp  Namespaces.hpp
include/: MediaPlayerWrapper.hpp
include/GStreamer/: CommonUtilities.hpp  FatGst.hpp  IAudioEffectBin.hpp  IEffectBin.hpp  Logging.hpp  Manager.hpp  MediaPlayer.hpp  Pipeline.hpp  PitchEffectBin.hpp
include/_macros/: Namespaces.hpp
src/: MediaPlayerWrapper.cpp  main.cpp
src/GStreamer/: IEffectBin.cpp  Manager.cpp  MediaPlayer.cpp  Pipeline.cpp  PitchEffectBin.cpp
